# phd-wolfram-code

./: .gitignore
background/: labelled.mx
background/cond5/: ac.wls  classify-add-samples.wls  compressed.wls  results.nb
background/import-data/: import-features.nb  notviewedFeatures.mx  skippedFeatures.mx  source-data-sets  unusedRevisedFeatures.mx  usedRevisedFeatures.mx
background/import-data/src/: CMakeLists.txt  import-smi-random.cpp
background/import-data/src/cmake/Modules/: FindCPPUTIL.cmake  FindMSMM.cmake
classify-smi/: classify-hmm.wls  classify-nn.py  classify-nn.wls  classify-smi.nb  data  extract-scores.wls  extract-tracks.wls  helpers-data.wls  helpers-scores.wls  report-michael.nb  requirements.txt  results  run-classify-hmm.wls  run-classify-nn.wls  run-gfix-hmm.wls  run-nn.sh  run-undersampling-nn.wls  run-undersampling-test-all-nn.wls  scores.txt  scores.wls  todo.org  track_ids.csv  tracks-to-csv.wls
classify-smi/train-hmm/src/: CMakeLists.txt  fit_hmm.tm  train_hmm.cpp  train_hmm.hpp
common/: RBM.wl  RBMBin.wl  TrackSelect.wl
filter-comparison/: compare-filters.nb
filter-comparison/data/: I942E.new-old.ci_10.txt  I942E.new-old.ci_8.txt  I942E.new.ci_10.txt  I942E.new.ci_8.txt  I942E.new.dist_gt_60.ci_gt_6.19_tracks.csv  I942E.new.dist_gt_60.ci_gt_6.19_tracks_density.txt  I942E.old-new.ci_10.txt  I942E.old-new.ci_8.txt  I942E.old.ci_10.txt  I942E.old.ci_8.txt  I942E.old.csv  I942E.old.dist_gt_60.ci_gt_6.18_tracks.csv  I942E.old.dist_gt_60.ci_gt_6.18_tracks_density.txt  L680N_MBCD_EGF.new-old.ci_10.txt  L680N_MBCD_EGF.new-old.ci_8.txt  L680N_MBCD_EGF.new.ci_10.txt  L680N_MBCD_EGF.new.ci_8.txt  L680N_MBCD_EGF.old-new.ci_10.txt  L680N_MBCD_EGF.old-new.ci_8.txt  L680N_MBCD_EGF.old.ci_10.txt  L680N_MBCD_EGF.old.ci_8.txt
level-detection/: data-helpers.wls  level-detection-net.h5  level-detection-real-verify-levels.bin.back  level-detection-real-verify.csv  level-detection.nb  level-helpers.wls  train-helpers.wls  visualise-helpers.wls
nanostructure/: data  fix-frames  main.nb  msmm_project  tiff
retired/nanostructure/: export_flimp  helpers.wls
retired/track-interpretation/: helpers-data.wls  max-likelihood.nb  read-tracks.nb
simulations/: README  adjust-parameters.wls  beads  beads.wls  classify-smi-analysable.wls  data.processed  fix-frames  helpers.wls  level-detection-helpers.wls  level-detection-manual.wls  level-detection-markov-chain.wls  prepare  refining-track-selection.wls  simulate-na.wls  simulate.nb
simulations/exportHDF5/src/: CMakeLists.txt  README  export_flimp.tm  export_hdf5.cpp  export_hdf5.hpp
track-interpretation/: helpers-plot.wls  read-tracks.nb  track-interpretation.nb
track-selection/: all.csv  calc.py  ci.csv  corr.csv  gen-ci-sep  track-selection.nb
track-selection/data/: new-filter.csv
track-selection/data/batch 1/: 20141103_0001_0001_nanopositioning_ranges.csv  20141103_0001_0002_nanopositioning_ranges.csv  20141103_0001_0003_nanopositioning_ranges.csv  20141103_0001_0004_nanopositioning_ranges.csv  20141103_0001_0005_nanopositioning_ranges.csv  20141103_0001_0006_nanopositioning_ranges.csv  20141103_0001_0007_nanopositioning_ranges.csv  20141103_0001_0008_nanopositioning_ranges.csv  20141103_0001_0009_nanopositioning_ranges.csv  20141103_0001_0010_nanopositioning_ranges.csv  20141103_0001_0011_nanopositioning_ranges.csv  20141103_0001_0012_nanopositioning_ranges.csv  20141103_0001_0013_nanopositioning_ranges.csv  20141103_0001_0014_nanopositioning_ranges.csv  20141103_0001_0015_nanopositioning_ranges.csv  20141103_0001_0016_nanopositioning_ranges.csv  20141103_0001_0018_nanopositioning_ranges.csv  20141103_0001_0019_nanopositioning_ranges.csv  20141103_0001_0020_nanopositioning_ranges.csv  20141103_0001_0021_nanopositioning_ranges.csv  20141103_0001_0022_nanopositioning_ranges.csv  20141103_0001_0024_nanopositioning_ranges.csv  (+18 more)
track-selection/trash/: MultiplePredictorsCI.data
(+137 files in other folders)
